@@ -1,0 +1,1 @@
+co.elastic.apm.agent.ecs_logging.Log4j2ServiceNameInstrumentation
